--- a/src/resources/templates/profile/admin/returned_table.html
+++ b/src/resources/templates/profile/admin/returned_table.html
@@ -9,7 +9,7 @@
             Returned media
         </strong>
     </div>
-    <div th:text="${returnedList}"></div>
+
     <table class="table">
         <thead class="thead-primary">
         <tr>
@@ -18,6 +18,10 @@
             <th scope="col">Title</th>
             <th scope="col">Author</th>
             <th scope="col">Copy ID</th>
+            <th scope="col">Fine</th>
+            <th scope="col">Start date</th>
+            <th scope="col">End date</th>
+            <th scope="col">Returned date</th>
         </tr>
         </thead>
         <tbody>
@@ -27,6 +31,10 @@
             <td th:text="${rent.getCopy().getMedia().getTitle()}"></td>
             <td th:text="${rent.getCopy().getMedia().getAuthor().getName()}"></td>
             <td th:text="${rent.getCopy().getId()}"></td>
+            <td th:text="${rent.getFine()} + ' $'"></td>
+            <td th:text="${rent.getDateStart()}"></td>
+            <td th:text="${rent.getDateEnd()}"></td>
+            <td th:text="${rent.getDateReturned()}"></td>
         </tr>
         </tbody>
     </table>
