Refactor: moved member profile templates to sub package

--- a/src/resources/templates/profile/member/edit.html
+++ b/src/resources/templates/profile/member/edit.html
@@ -6,9 +6,9 @@
 <div th:replace="header/header :: copy"></div>
 <div class="container">
 
-    <div th:switch = "${editable}">
-        <p th:case="'username'"><span th:replace="profile/username_change :: copy"></span></p>
-        <p th:case="'password'"><span th:replace="profile/password_change :: copy"></span></p>
+    <div th:switch = "${editable}">  <!--TODO make tab-->
+        <p th:case="'username'"><span th:replace="profile/member/username_change :: copy"></span></p>
+        <p th:case="'password'"><span th:replace="profile/member/password_change :: copy"></span></p>
     </div>
     <div th:replace="footer :: copy"></div>
 
