--- a/src/resources/templates/profile/main_profile.html
+++ b/src/resources/templates/profile/main_profile.html
@@ -6,9 +6,9 @@
         <div th:replace="header/header :: copy"></div>
         <div class="container">
             <div th:replace="header/edit_profile :: copy"></div>
-            <div th:replace="profile/pending_table :: copy"></div>
-            <div th:replace="profile/rented_table :: copy"></div>
-            <div th:replace="profile/returned_table :: copy"></div>
+            <div th:replace="profile/member/pending_table :: copy"></div>
+            <div th:replace="profile/member/rented_table :: copy"></div>
+            <div th:replace="profile/member/returned_table :: copy"></div>
 
 
 
