Design: admin page.

--- a/src/resources/templates/profile/admin/pending_table.html
+++ b/src/resources/templates/profile/admin/pending_table.html
@@ -30,7 +30,7 @@
             <td th:text="${rent.getCopy().getId()}"></td>
             <td>
                 <form th:action="${'/startrent/' + rent.getId()}">
-                    <input type="submit" value="Start rent"/>
+                    <input class="btn btn-success admin" type="submit" value="Start rent"/>
                 </form>
             </td>
         </tr>
