--- a/src/resources/templates/header/login_block.html
+++ b/src/resources/templates/header/login_block.html
@@ -6,20 +6,20 @@
     <li class="active">
         <div th:if="${memberName}">
             <div class="btn-group" role="group" aria-label="Basic example">
-                <button type="button" class="btn btn-outline-primary" th:text="'Hi ' + ${memberName}"></button>
+                <button type="button" class="btn btn-outline-primary reg" th:text="'Hi ' + ${memberName}"></button>
                 <a href="/logout">
-                    <button type="button" class="btn btn-outline-primary">Logout</button>
+                    <button type="button" class="btn btn-outline-primary log">Logout</button>
                 </a>
-            </div>
-            <a href="/profile"><img src="/img/profile.png" alt=""/></a>
+            </div> <!--TODO check it-->
+                <a href="/profile"><img th:src="${#strings.toString(memberShip)} != 'ADMIN' ? '/img/profile.png' : ''" alt=""/></a>
         </div>
         <div th:unless="${memberName}">
             <div class="btn-group" role="group" aria-label="Basic example">
                 <a href="/registration">
-                    <button type="register" class="btn btn-primary">Register</button>
+                    <button type="register" class="btn btn-primary reg">Register</button>
                 </a>
                 <a href="/login">
-                    <button type="login" class="btn btn-primary">Login</button>
+                    <button type="login" class="btn btn-primary log">Login</button>
                 </a>
             </div>
         </div>
