basic book review page working

--- a/src/resources/templates/media/book_review.html
+++ b/src/resources/templates/media/book_review.html
@@ -7,7 +7,7 @@
 
         <div class="container">
 
-            <p th:text="${medim.getTitle()}"></p>
+            <p th:text="${medium.getTitle()}"></p>
         </div>
 
     </body>
