Design: login/registartion page.

--- a/src/resources/templates/logregpart.html
+++ b/src/resources/templates/logregpart.html
@@ -3,9 +3,9 @@
 <body>
 
 <div th:fragment="copy">
-    <input th:required="required" type="text" name="name" placeholder="login name" />
+    <input class="form-control" th:required="required" type="text" name="name" placeholder="login name" />
     <br/>
-    <input th:required="required" type="password" name="password" placeholder="password" />
+    <input class="form-control" th:required="required" type="password" name="password" placeholder="password" />
     <br/>
 
 </div>
