--- a/src/resources/public/css/custom.css
+++ b/src/resources/public/css/custom.css
@@ -190,7 +190,18 @@
     border-radius: 0rem .75rem 0rem 0rem;
 }
 
-.co
+.logreg {
+    width: 60%;
+    margin: 0 auto;
+}
+
+.mid {
+    margin: 0 auto;
+}
+
+.paddingbotnull {
+    padding-bottom: 0;
+}
 
 body{
     background: radial-gradient(#ffffff, #eeeeee);
