--- a/src/resources/templates/profile/member/membership.html
+++ b/src/resources/templates/profile/member/membership.html
@@ -9,40 +9,29 @@
     <div th:if="${user_information}">
         <h3 th:text="${user_information}">user info</h3>
     </div>
+
+    <div class="breadcrumb">
+        <h2>Choose your membership</h2>
+    </div>
     <div id="products" class="row list-group">
-        <div class="item col-3" th:each="membership,iterStat : ${membershiplist}">
-            <img class="group list-group-image" src="/img/book_thumb.png" th:src="'/img/'+${membership.getImgURL()}" alt="" height="200" width="200"/>
-            <div class="thumbnail">
-                <div class="caption">
-                    <h2 class="group inner list-group-item-heading" th:text="${membership.getMessage()}">
-                        Message</h2>
-                    <div class="row">
-                        <div>
-                            <div>
-                                <h4 class="group inner list-group-item-heading"
-                                    th:text="'Limit: ' + ${membership.getLimit()}">Limit</h4>
-                                <div class="col-6">
-                                    <h5 class="group inner list-group-item-heading"
-                                        th:text="'Price: ' + ${membership.getPrice()}">
-                                        Price</h5>
-                                    <form action="/membership" method="post">
-
-                                        <input type="hidden" th:value="${membership}" name="membership_type"/>
-                                        <div th:if="${membership} != ${user_membership}">
-                                            <input class="btn btn-primary" type="submit" value="Buy"/>
-                                        </div>
-
-                                    </form>
-                                </div>
-                            </div>
+        <div class="card col-3" th:each="membership,iterStat : ${membershiplist}">
+            <img class="card-img-top" src="/img/book_thumb.png" th:src="'/img/'+${membership.getImgURL()}" alt=""/>
+            <div class="card-body">
+                <div>
+                    <h4 class="list-group-item-heading" th:text="'Rent limit: ' + ${membership.getLimit()}">Limit</h4>
+                    <h5 class="list-group-item-heading"
+                        th:text="'Price: ' + ${membership.getPrice()} + ' $'">
+                        Price</h5>
+                    <form action="/membership" method="post">
+                        <input type="hidden" th:value="${membership}" name="membership_type"/>
+                        <div th:if="${membership} != ${user_membership}">
+                            <input class="btn btn-primary" type="submit" value="Buy"/>
                         </div>
-                    </div>
-
+                    </form>
                 </div>
             </div>
         </div>
     </div>
     </div>
-    <div th:replace="footer :: copy"></div>
 </body>
 </html>
