--- a/src/resources/templates/media/book_review.html
+++ b/src/resources/templates/media/book_review.html
@@ -16,15 +16,29 @@
                         <p class = "brvalue" th:text="${medium.getAuthor().getName()}"></p>
                         <p class="brtitle">Year of release:</p>
                         <p class = "brvalue" th:text="${medium.getYear()}"></p>
-                        <form action="/rent" method="post">
-                            <input type="hidden" th:name="media_id" th:value="${medium.getId()}" />
-                            <div class="d-flex" th:if="${medium.isCopyAvailable()}">
-                                <input class="btn btn-primary ml-auto" type="submit" value ="Rent"/>
-                            </div>
-                            <div class="d-flex" th:unless="${medium.isCopyAvailable()}">
-                                <input class="btn btn-secondary ml-auto" type="submit" value ="Rent" disabled=""/>
-                            </div>
-                        </form>
+                        <div class="row">
+                            <span class="col">
+                                <form th:action="'/rating/'+${medium.getId()}"  method="get">
+                                    <input class="btn btn-primary ml-auto" type="submit" value ="Add Rating"/>
+                                </form>
+                            </span>
+                            <span class="col">
+                                <form th:action="'/review/'+${medium.getId()}" method="get">
+                                    <input class="btn btn-primary ml-auto" type="submit" value ="Add Review"/>
+                                </form>
+                            </span>
+                            <span class="col">
+                                <form action="/rent" method="post">
+                                    <input type="hidden" th:name="media_id" th:value="${medium.getId()}" />
+                                    <div class="d-flex" th:if="${medium.isCopyAvailable()}">
+                                        <input class="btn btn-primary ml-auto" type="submit" value ="Rent"/>
+                                    </div>
+                                    <div class="d-flex" th:unless="${medium.isCopyAvailable()}">
+                                        <input class="btn btn-secondary ml-auto" type="submit" value ="Rent" disabled=""/>
+                                    </div>
+                                </form>
+                            </span>
+                        </div>
                     </div>
                 </div>
             </div>
