--- a/src/resources/templates/header/header.html
+++ b/src/resources/templates/header/header.html
@@ -15,10 +15,7 @@
 
             </div>
             <div class="jumbotron text-center">
-                <h2>
-                    CrashBooks
-                    <small class="text-white">by Code Crashers</small>
-                </h2>
+                <img id="bannerlogo" src="/img/CB_logo2.png" alt=""/>
             </div>
         </div>
 
