--- a/src/resources/templates/profile/member/password_change.html
+++ b/src/resources/templates/profile/member/password_change.html
@@ -8,7 +8,7 @@
         <input th:required="required" type="password" name="psw1" placeholder="new password"/>
         <br/>
         <input th:required="required" type="password" name="psw2" placeholder="new password again"/>
-        <button type="submit" class = "btn btn-warning">Change Username</button>
+        <button type="submit" class = "btn btn-primary">Change Username</button>
     </form>
 </div>
 </body>
