--- a/src/resources/templates/profile/member/username_change.html
+++ b/src/resources/templates/profile/member/username_change.html
@@ -6,7 +6,7 @@
 <div th:fragment="copy">
     <form action="/edit/username" method="post">
         <input th:required="required" type="text" name="name" th:attr="value=${memberName}"/>
-        <button type="submit" class = "btn btn-warning">Change Username</button>
+        <button type="submit" class = "btn btn-primary">Change Username</button>
     </form>
 </div>
 </body>
