--- a/src/resources/templates/media/review.html
+++ b/src/resources/templates/media/review.html
@@ -7,7 +7,7 @@
 <div class="container">
     <div class="card logreg">
         <div class="card-body paddingbotnull">
-            <form method = "post" th:action="'/rating/'+${mediumId}">
+            <form method = "post" th:action="'/review/'+${mediumId}">
                 <div class="form-group">
                     <input name = "rating" type ="text" required="required"/>
                     <div class="row">
