rate stars are checked after rating

--- a/src/resources/templates/media/book_review.html
+++ b/src/resources/templates/media/book_review.html
@@ -19,13 +19,13 @@
 
                         <div class="row">
 
-                            <fieldset class="rating">
+                            <fieldset class="rating" th:if="${memberName}">
                                 <span class="brtitle">Rate: </span>
-                                <input type="radio" id="star5" name="rating" value="5" th:onclick="|javascript:location.href='/rate/${medium.getId()}/5'|" /><label class = "full" for="star5" title="Awesome - 5 stars"></label>
-                                <input type="radio" id="star4" name="rating" value="4" th:onclick="|javascript:location.href='/rate/${medium.getId()}/4'|" /><label class = "full" for="star4" title="Pretty good - 4 stars"></label>
-                                <input type="radio" id="star3" name="rating" value="3" th:onclick="|javascript:location.href='/rate/${medium.getId()}/3'|" /><label class = "full" for="star3" title="Meh - 3 stars"></label>
-                                <input type="radio" id="star2" name="rating" value="2" th:onclick="|javascript:location.href='/rate/${medium.getId()}/2'|" /><label class = "full" for="star2" title="Kinda bad - 2 stars"></label>
-                                <input type="radio" id="star1" name="rating" value="1" th:onclick="|javascript:location.href='/rate/${medium.getId()}/1'|" /><label class = "full" for="star1" title="Sucks big time - 1 star"></label>
+                                <input type="radio" id="star5" name="rating" value="5" th:onclick="|javascript:location.href='/rate/${medium.getId()}/5'|" th:checked="${userRating == 5}" /><label class = "full" for="star5" title="Awesome - 5 stars"></label>
+                                <input type="radio" id="star4" name="rating" value="4" th:onclick="|javascript:location.href='/rate/${medium.getId()}/4'|" th:checked="${userRating == 4}" /><label class = "full" for="star4" title="Pretty good - 4 stars"></label>
+                                <input type="radio" id="star3" name="rating" value="3" th:onclick="|javascript:location.href='/rate/${medium.getId()}/3'|" th:checked="${userRating == 3}" /><label class = "full" for="star3" title="Meh - 3 stars"></label>
+                                <input type="radio" id="star2" name="rating" value="2" th:onclick="|javascript:location.href='/rate/${medium.getId()}/2'|" th:checked="${userRating == 2}" /><label class = "full" for="star2" title="Kinda bad - 2 stars"></label>
+                                <input type="radio" id="star1" name="rating" value="1" th:onclick="|javascript:location.href='/rate/${medium.getId()}/1'|" th:checked="${userRating == 1}" /><label class = "full" for="star1" title="Sucks big time - 1 star"></label>
                             </fieldset>
 
                             <span class="col">
