filter removed from medium view

--- a/src/resources/templates/media/book_review.html
+++ b/src/resources/templates/media/book_review.html
@@ -3,7 +3,7 @@
     <head th:replace="head :: copy"></head>
     <body>
 
-        <div th:replace="header/headerWithFilter :: copy"></div>
+        <div th:replace="header/header :: copy"></div>
 
         <div class="container bookinfo">
             <div class="card">
